--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "gsap": "^3.13.0",
     "lil-gui": "^0.20.0",
+    "lottie-web": "^5.13.0",
     "sass": "^1.89.2",
     "three": "^0.178.0"
   }
